changed shadows, fixed validation message z-index

--- a/src/abstracts/_variables.scss
+++ b/src/abstracts/_variables.scss
@@ -9,4 +9,6 @@
     --color-green: #33d9b2;
     --color-purple: #706fd3;
     // --color-green: #218c74;
+
+    --block-shadow: 0 1rem 2rem rgba(0, 0, 0, .2);
 }
