--- a/src/components/add-player-form/_add-player-form.scss
+++ b/src/components/add-player-form/_add-player-form.scss
@@ -5,6 +5,7 @@
         padding: .6rem 1.5rem;
         border-radius: 3px;
         background-color: rgba(256, 256, 256, .8);
+        box-shadow: var(--block-shadow);
         margin-right: 1rem;
     }
 
