--- a/src/components/button/_button.scss
+++ b/src/components/button/_button.scss
@@ -7,7 +7,7 @@
 
     border-radius: 3px;
 
-    box-shadow: 0 1rem 1rem rgba($color: #000000, $alpha: .2);
+    box-shadow: var(--block-shadow);
     color: #fff;
     text-shadow: 0 1px 1px rgba($color: #000000, $alpha: .5);
 
