--- a/src/components/card/_card.scss
+++ b/src/components/card/_card.scss
@@ -8,6 +8,6 @@
     background-color: var(--color-swan-white);
     padding: 2rem 4rem;
     border-radius: 5px;
-    box-shadow: 0 1rem 4rem rgba(0, 0, 0, .2);
+    box-shadow: var(--block-shadow);
 
 }
