--- a/src/components/list/_list.scss
+++ b/src/components/list/_list.scss
@@ -2,6 +2,7 @@
     width: 40rem;
     margin-top: 5rem;
     list-style: none;
+    box-shadow: var(--block-shadow);
     background-color: var(--color-swan-white);
     border-radius: 5px;
 
